n-vm-macros/tests/compile_fail/standalone_network.rs
// SPDX-License-Identifier: Apache-2.0
// Copyright Open Network Fabric Authors

#[n_vm::network(nic_model = "e1000")]
fn standalone_network() {}

fn main() {}